hw-01_correction _WebStudio

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <!--Верхняя линия-->
     <header>
       <nav>
+        <a href="/">WebStudio</a>
         <ul>
-          <li><a href="/">WebStudio</a></li>
           <li><a href="#">Студия</a></li>
           <li><a href="#">Портфолио</a></li>
           <li><a href="#">Контакты</a></li>
